Plugin Name: CoursePress Pro
Author: Marko Miljus ( Incsub ) / Rheinard Korf ( Incsub )

CHANGE LOG
=================================================

== Changelog ==

= 1.2.3.5 =
* Fixed issue with multisite and granting and revoking instructor capabilities.

= 1.2.3.4 =
* Added additional instructor capability for managing Course Categories
* Added unit elements preloader
* Course completion actions added for developers: 'coursepress_student_course_completed', 'coursepress_student_course_unit_completed'
* Unit completion actions added for developers: 'coursepress_student_course_unit_pages_viewed', 'coursepress_student_course_unit_mandatory_question_answered', 'coursepress_student_course_unit_gradable_question_passed'
* New options for "Who can enroll" when not allowing anyone to register to your site.
* Fixed WordPress 4.1 issues (hidden course list in the admin, hidden assessment list)
* Fixed "administrator" role for network sites.
  CoursePress menus and permissions now work properly for new sites.
  For old sites the administrator's role will have to be reset (change to "subscriber" then back to "administrator").
* Fixed shortcode typos on the settings page
* Fixed issue with prerequisite courses for non-logged-in users
* Fixed issues with enrollment/signup button
* Fixes issue with unit editors upon reordering elements (Firefox)
* Strip html tags from the assessment comment ALT and TITLE
* Fixed issues with dummy course not being created upon first install 
* Other code improvements

= 1.2.3.3 =
* Added course category filter on the courses admin page
* Fixed issue with thumbnails not displaying or getting generated for courses.
* Fixed issues with WordPress search when CoursePress plugin is active
* Fixed oEmbeds when pasting links to supported websites in Unit Elements.
* Fixed issue with student access to the enrolled courses

= 1.2.3.2 =
* Fixed translation file

= 1.2.3.1 =
* Updated MarketPress to 2.9.5.9